app.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
    service: web
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      serviceAccountName: web-sa
      containers:
      - name: web
        image: web:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: graphql
  labels:
    app: graphql
    service: graphql
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: graphql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
  labels:
    app: graphql
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql
      version: v1
  template:
    metadata:
      labels:
        app: graphql
        version: v1
    spec:
      serviceAccountName: graphql-sa
      containers:
      - name: graphql
        image: graphql:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
    service: postgres
spec:
  ports:
  - port: 5432
    name: tcp
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      version: v1
  template:
    metadata:
      labels:
        app: postgres
        version: v1
    spec:
      serviceAccountName: postgres-sa
      containers:
      - name: postgres
        image: postgres:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: usuarios
  labels:
    app: usuarios
    service: usuarios
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: usuarios
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios
  labels:
    app: usuarios
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios
      version: v1
  template:
    metadata:
      labels:
        app: usuarios
        version: v1
    spec:
      serviceAccountName: usuarios-sa
      containers:
      - name: usuarios
        image: usuarios:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
