gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apis-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apis
spec:
  hosts:
  - "*"
  gateways:
  - apis-gateway
  http:
  - name:
    match:
    - uri:
        prefix: /web
    route:
    - destination:
        host: web
        port:
          number: 5000
  - name:
    match:
    - uri:
        prefix: /graphql
    route:
    - destination:
        host: graphql
        port:
          number: 5000
  - name:
    match:
    - uri:
        prefix: /usuarios/graphql
    route:
    - destination:
        host: usuarios
        port:
          number: 5000
